--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 NODE_ENV=production
 PORT=3000
-DB_PATH=/var/data/cierres.db
 SECRET_KEY=facuautoriza
+
+# PostgreSQL - Neon
+DATABASE_URL=postgresql://user:password@host/database?sslmode=require
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
