--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["real-estate", "map"],
+  "keywords": [
+    "real-estate",
+    "map"
+  ],
   "author": "Facundo",
   "license": "ISC",
   "type": "commonjs",
@@ -16,11 +19,14 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
+    "pg": "^8.17.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
